--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,7 +10,7 @@
   margin: 0;
 }
 
-.navbar-list-item {
+.navbar-list-item-old {
   display: block;
   flex: 0 1 auto; /* Default */
   list-style-type: none;
@@ -24,5 +24,15 @@
   color: #fafafa;
   background-color: none;
 }
-.navbar-logo {
+
+.navbar-list-item {
+  display: block;
+  flex: 0 1 auto; /* Default */
+  list-style-type: none;
+  /**/
+  padding: .25rem .75rem;
+  margin: 5px;
+  /* color */
+  color: #fafafa;
+  background-color: none;
 }
