--- a/src/components/style/App.css
+++ b/src/components/style/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #64bd9c;
+}
+
 .App {
   text-align: center;
 }
@@ -8,7 +12,12 @@
 
 .app-header {
   background-color: #282c34;
-  min-height: 10vh;
+  /*
+    background-image: url("https://image.shutterstock.com/z/stock-photo-table-football-foosball-soccer-game-aka-kicker-abstract-light-400019149.jpg");
+  */
+  background-image: url("https://c.pxhere.com/photos/2e/b9/game_soccer_table_football_player_figure-69348.jpg!d");
+  background-size: cover;
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
