FIX - code review + social login

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ tbody {
   background-color: whitesmoke
 }
 
-.list-group-item {
+.inherit-background.list-group-item {
   background-color: inherit
 }
 
