--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,7 @@
 
 body {
   margin: 0;
+  background-color: #64bd9c;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -53,6 +54,7 @@ body {
 tbody {
   background-color: whitesmoke
 }
+
 
 .inherit-background.list-group-item {
   background-color: inherit
