--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 :root {
   --default-yellow: #ffc107;
   --default-red: #dc3545;
-  --default-black: #343A40;
+  --default-black: #343a40;
   --default-white: whitesmoke;
   --default-green: #64bd9c;
 }
