--- a/src/components/Pair/style.css
+++ b/src/components/Pair/style.css
@@ -3,7 +3,8 @@
 }
 
 .pair-table-header {
-    background-color: #3db9cc;
+    background-color: #343a40;
+    color: #ffc107;
 }
 
 .pair-table-header-element {
