--- a/src/components/Stage1/style.module.css
+++ b/src/components/Stage1/style.module.css
@@ -5,6 +5,11 @@
 .player-table-header {
     background-color: #343a40;
     color: #ffc107;
-
 }
 
+
+.functionsList {
+    display: flex;
+    flex-direction: row;
+    background-color: inherit
+}
