--- a/src/common.module.css
+++ b/src/common.module.css
@@ -3,3 +3,14 @@
     flex-direction: row;
     background-color: inherit
 }
+
+.toolsBarContainer{
+    background-color: var(--default-black);
+    border-radius: 10px;
+    padding: 10px;
+    margin-bottom: 2em;
+}
+
+.toolsBarRow{
+    padding: 10px;
+}
